Bug 402949 - kinfocenter does not present the usb devices correctly
Summary: kinfocenter does not present the usb devices correctly
Status: RESOLVED FIXED
Alias: None
Product: kinfocenter
Classification: Applications
Component: USB Devices (other bugs)
Version First Reported In: 5.14.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: David Hubner
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-07 00:47 UTC by Alexandre
Modified: 2019-01-15 22:52 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.15.0
Sentry Crash Report:


Attachments
Patch for the problem (2.40 KB, patch)
2019-01-07 00:47 UTC, Alexandre
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexandre 2019-01-07 00:47:06 UTC
Created attachment 117314 [details]
Patch for the problem

SUMMARY
the USBview portion of kinfocenter does not present the information correclty for devices that below the first level

STEPS TO REPRODUCE
1. Execute kinfocenter
2. List USB devices on the machine
3. 

OBSERVED RESULT

List only the first level of devices (bus 0-n) but no devices for the second level)


EXPECTED RESULT

List all the devices on the USB bus

SOFTWARE/OS VERSIONS
Windows: 
MacOS: 
Linux/KDE Plasma: Gentoo with kernel 4.20.0
(available in About System)
KDE Plasma Version: 5.14.4
KDE Frameworks Version: 5.53.0
Qt Version: 5.12.0

ADDITIONAL INFORMATION
Comment 1 David Edmundson 2019-01-15 14:11:59 UTC
Git commit e556c25c888a6e16e818945ac5bc81e455ddd4bc by David Edmundson, on behalf of Alexandre Ferreira.
Committed on 15/01/2019 at 14:11.
Pushed by davidedmundson into branch 'master'.

Fix USB view

Summary:
Fix

Reviewers: #plasma, cfeck, davidedmundson

Reviewed By: #plasma, davidedmundson

Subscribers: asturmlechner, davidedmundson, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D18032

M  +3    -0    Modules/usbview/usbdb.cpp
M  +1    -1    Modules/usbview/usbdevices.cpp

https://commits.kde.org/kinfocenter/e556c25c888a6e16e818945ac5bc81e455ddd4bc